# SDL2-cmake

./: CMakeLists.txt  README.md
